--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.messages.fallback-to-system-locale=false
 server.tomcat.uri-encoding=UTF-8
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=27aB.#cd75
+spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE>
+spring.datasource.username=<YOUR_USER>
+spring.datasource.password=<YOUR_PASSWORD>
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.net.ttddyy.dsproxy.listener=info
